fixed search bar to be aligned center and the cross hairs to be centered on the right side of it

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -14,7 +14,7 @@
 
 .current-local-button{
   position: absolute;
-  top: 108px; 
+  top: 93px; 
   z-index: 5;
   width: 2%; 
   left: 60.5%;
